--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
 <p> <a href="$" class="bluelink"> Download Excursion (Coming soon!)</a></p>
 
     </header>
+    <div class="video" alt="Product demosntration video">
+        <video autoplay muted> 
+            <source src="resources/images/excursion.mp4" type="video/mp4">
+        </video>
+<div>
+    <h2> Your personal travel guide</h2>
+    <p class="gray"> Excursion remembers places you like, and recommends new points of interest around you</p>
+</div>
+<div>
+<img src="resources/images/camp.webp"> <br> <br>
+<img src="resources/images/phone.webp"> <br>
+<h2> Coming Soon for Iphone and Android</h2>
+<p> <a href="$" class="bluelink"> Download Excursion (Coming soon!)</a></p>
+</div>
+
+<footer>
+    <p class="gray" id="right"> © Excursion </p>
+</footer>
+
+
+
+
     
 </body>
 </html>
